    when the sandbox is offline.

  * Changed the following special variable names to make their purpose clearer:
        - csq_python_sandbox => csq_python_sandbox_type
        - csq_python_interpreter => csq_python_sandbox_interpreter


DEPRECATED:

REMOVED:

  * Due to build issues on some platforms, catsoop no longer depends on uwsgi
    unless [server] is specified when installing

FIXED:

  * Fixed a crash from "render_escaped_dollar" method not existing (triggered
    by mistletoe update?)

  * Fixed multiple issues with "-c" flag and "CATSOOP_CONFIG" environment
    variable

  * Fixed incorrect help text with "catsoop logedit" command

  * Fixed an old bug where submitting an asynchronously-checked question while
    another submission is queued for that same question caused confused results
    to be displayed

  * Fixed a potential bug in the "pythoncode" question type when decoding
    submitted files containing a BOM

  * An empty string is no longer considered to be a well-formed response to a
    "pythonic" question

  * Fixed a potential bug with the length calculation in the "raw_response"
    header when "response" was given as a string containing unicode characters
    (thanks to Shen Shen)

  * Fixed an issue with custom "csq_check_function" used with "checkbox"
    renderer in "multiplechoice" questions.

  * Fixed a display issue causing a "hamburger" to appear on narrow screens
    even with no menu items present

  * Replaced the <showhide> implementation so as to avoid broken rendering of
    <details> tags in Chromium/Chrome

  * Code blocks within responses to question submissions are now properly
    highlighted

  * Fixed a regression that caused the 'timeout' option in pythoncode test
    cases to be ignored

SECURITY:

  * The "openid_connect" authentication type would previously pull
    authentication information from a context that could be altered by
    individual courses.

ACCESSIBILITY:
